C2 Requirement Completed -  Provide an interface that allows the user to access all the following features for each academic term:
 •   add and display a list of six courses for each term

 •   display a detailed view of each term, including all the information from part C1

--- a/C971/C971.csproj
+++ b/C971/C971.csproj
@@ -64,4 +64,22 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.9" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="CourseDetailPage.xaml.cs">
+	    <DependentUpon>CourseDetailPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="TermDetailPage.xaml.cs">
+	    <DependentUpon>TermDetailPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="CourseDetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="TermDetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
