C3 Requirement Completed - Provide an interface that allows the user to access and edit all the following details for each course:  •   course title  •   start and anticipated end dates (using a date picker)  •   course status (e.g., in progress, completed, dropped, plan to take) (using a picker)  •   the course instructor’s name, phone number, and email address; include validation to prevent the user from saving a null value (e.g., an invalid email address

--- a/C971/C971.csproj
+++ b/C971/C971.csproj
@@ -68,6 +68,9 @@
 	  <Compile Update="CourseDetailPage.xaml.cs">
 	    <DependentUpon>CourseDetailPage.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="EditCoursePage.xaml.cs">
+	    <DependentUpon>EditCoursePage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="TermDetailPage.xaml.cs">
 	    <DependentUpon>TermDetailPage.xaml</DependentUpon>
 	  </Compile>
@@ -75,6 +78,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="CourseDetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="EditCoursePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="TermDetailPage.xaml">
